--- a/app.json
+++ b/app.json
@@ -4,6 +4,9 @@
     "slug": "criador_memes_app",
     "privacy": "public",
     "sdkVersion": "31.0.0",
+    "android": {
+      "package": "com.douglas.criador_memes_app"
+    },
     "platforms": [
       "ios",
       "android"
